fixed nav on safari

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -59,8 +59,7 @@ div.logo {
     align-items: center;
     margin-right: 15px;
     width: auto;
-    height: 100%git add .
-    ;
+    height: 100%;
 }
 
 div.logo img {
